[gd_scene load_steps=3 format=3 uid="uid://dnkhdw26lgaw4"]

[ext_resource type="Script" uid="uid://t31b1fkl5o30" path="res://scripts/player/FreezeEffect.gd" id="1_ajxd6"]
[ext_resource type="PackedScene" uid="uid://bg6kgfg02dfo" path="res://scenes/vfx/freeze_vfx.tscn" id="2_gdle3"]

[node name="FreezeEffect" type="Node2D"]
scale = Vector2(3.65338, 3.65338)
script = ExtResource("1_ajxd6")

[node name="FreezeVFX" parent="." instance=ExtResource("2_gdle3")]
position = Vector2(91.6667, -16.6667)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(77.6042, 12.5)
scale = Vector2(1, 0.96875)
polygon = PackedVector2Array(10.4167, -3.76344, -7.29166, 50, 101.042, 184.409, 233.854, 81.7204, 241.667, -55.914, 119.271, -192.473, -14.0625, -69.8925)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
